--- a/pages/subpages/home/trip-type/lake-cycle/index.wxss
+++ b/pages/subpages/home/trip-type/lake-cycle/index.wxss
@@ -91,11 +91,11 @@ page {
   height: 92rpx;
 }
 
-.scenic-list {
+.cycle-scenic-list {
   margin-top: 40rpx;
   height: 400rpx;
 }
-.scenic-item {
+.cycle-scenic-item {
   position: relative;
   margin-bottom: 32rpx;
   width: calc(100vw - 100rpx); 
@@ -107,14 +107,14 @@ page {
   transition: transform 0.2s ease;
   will-change: transform;
 }
-.scenic-item.unselect {
+.cycle-scenic-item.unselect {
   transform: scale(0.92);
 }
-.scenic-cover {
+.cycle-scenic-cover {
   width: 100%;
   height: 100%;
 }
-.scenic-name-wrap {
+.cycle-scenic-name-wrap {
   position: absolute;
   top: 0;
   left: 0;
@@ -124,13 +124,13 @@ page {
   font-weight: 500;
   text-shadow: 0 0 1px #999;
 }
-.scenic-name {
+.cycle-scenic-name {
   font-size: 38rpx;
 }
-.scenic-desc {
+.cycle-scenic-desc {
   font-size: 24rpx;
 }
-.scenic-info-wrap {
+.cycle-scenic-info-wrap {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -141,20 +141,20 @@ page {
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(8px);
 }
-.scenic-data-list {
+.cycle-scenic-data-list {
   flex: 1;
 }
-.scenic-data {
+.cycle-scenic-data {
   font-size: 30rpx;
   font-weight: 600;
   line-height: 1;
 }
-.scenic-data-unit {
+.cycle-scenic-data-unit {
   margin-left: 4rpx;
   font-size: 18rpx;
   font-weight: 400;
 }
-.scenic-data-desc {
+.cycle-scenic-data-desc {
   font-size: 18rpx;
 }
 .split-line {
@@ -171,4 +171,9 @@ page {
   display: block;
   width: 483rpx;
   height: 140rpx;
+}
+
+.media-wrap {
+  margin-top: 32rpx;
+  padding: 0 20rpx;
 }
