feat: 夜游千岛湖

--- a/pages/subpages/home/trip-type/night-trip/components/trip-item/index.wxss
+++ b/pages/subpages/home/trip-type/night-trip/components/trip-item/index.wxss
@@ -45,7 +45,7 @@
 }
 
 .featrue-list {
-  padding: 0 32rpx;
+  padding: 0 32rpx 48rpx;
 }
 .featrue-item {
   display: flex;
@@ -82,5 +82,5 @@
 
 .media-list {
   display: flex;
-  padding: 48rpx 32rpx;
+  padding: 0 32rpx 48rpx;
 }
