--- a/pages/subpages/home/trip-type/night-trip/components/trip-item/index.wxss
+++ b/pages/subpages/home/trip-type/night-trip/components/trip-item/index.wxss
@@ -73,7 +73,7 @@
   color: #fff;
   background: #FF3200;
 }
-.feartrue-content {
+.featrue-content {
   margin-left: 12rpx;
   flex: 1;
   color: #fff;
