--- a/pages/subpages/home/trip-type/star-trip/index.wxss
+++ b/pages/subpages/home/trip-type/star-trip/index.wxss
@@ -30,7 +30,7 @@
   width: 100%;
   height: 80rpx;
   content: "";
-  background: #009DFF;
+  background: #009dff;
   border-radius: 0 0 60rpx 60rpx;
   z-index: -1;
 }
@@ -40,7 +40,7 @@
 }
 .trip-item {
   position: relative;
-  width: 390rpx; 
+  width: 390rpx;
   height: 611rpx;
   font-size: 0;
   border-radius: 48rpx;
@@ -57,6 +57,38 @@
   height: 100%;
 }
 
+.trip-info {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 150rpx;
+  padding: 32rpx;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(8px);
+  clip-path: polygon(0 0%, 100% 20%, 100% 100%, 0% 100%);
+}
+.trip-name {
+  font-size: 34rpx;
+  font-weight: 600;
+}
+.trip-desc {
+  margin-top: 8rpx;
+  font-size: 24rpx;
+}
+.trip-arrow {
+  width: 24rpx;
+  height: 24rpx;
+}
+.top-tag {
+  position: absolute;
+  right: 24rpx;
+  bottom: 68rpx;
+  width: 72rpx;
+  height: 83rpx;
+}
+
 .current-dot-wrap {
   position: absolute;
   right: 48rpx;
@@ -66,14 +98,14 @@
   position: relative;
   width: 126rpx;
   height: 10rpx;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 5rpx;
   overflow: hidden;
 }
 .progress-inner {
   position: relative;
   height: 10rpx;
-  background: #009DFF;
+  background: #009dff;
   border-radius: 5rpx;
 }
 .current-dot {
