--- a/components/poster-modal/index.wxml
+++ b/components/poster-modal/index.wxml
@@ -2,12 +2,13 @@
   <canvas id="poster" class="poster" type="2d" />
   <view class="btns">
     <button class="btn" open-type='share' hover-class="none">
-      <image class="btn-icon" src="https://img.ubo.vip/tiddler/poster/wechat.png" />
-      <view>发给朋友</view>
+      <image class="btn-icon" src="https://static.tiddler.cn/mp/poster/link.png" />
+      <view>分享链接</view>
     </button>
     <button class="btn" catchtap="save" hover-class="none">
-      <image class="btn-icon" src="https://img.ubo.vip/tiddler/poster/download.png" />
+      <image class="btn-icon" src="https://static.tiddler.cn/mp/poster/download.png" />
       <view>保存海报</view>
     </button>
+    <image class="close-icon" catchtap="hide" src="https://static.tiddler.cn/mp/poster/close.png" />
   </view>
 </view>
