--- a/pages/subpages/home/media/live/live-push/components/push-room/index.wxml
+++ b/pages/subpages/home/media/live/live-push/components/push-room/index.wxml
@@ -74,7 +74,7 @@
 <subscribe-remind-popup wx:if="{{subscribeRemindPopupVisible}}" groupId="{{roomInfo.groupId}}" bind:hide="hideModal" />
 
 <modal-mask 
-  wx:if="{{inputPopupVisible || posterModalVisible}}" 
+  wx:if="{{inputPopupVisible}}" 
   opacity="{{!inputPopupVisible ? 0.3 : 0}}" 
   filter="{{posterModalVisible}}"
   catchtap="hideModal"
