--- a/components/poster-modal/index.wxss
+++ b/components/poster-modal/index.wxss
@@ -1,35 +1,54 @@
 .poster-modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 291px;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 100;
 }
+
 .poster {
-  width: 291px;
-  height: 416px;
+  position: absolute;
+  top: calc((100vh - 140rpx) / 2);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 320px;
+  height: 530px;
 }
 
 .btns {
+  position: absolute;
+  left: 0;
+  bottom: 0;
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-  padding: 0 50px;
+  justify-content: space-around;
+  padding: 0 56rpx;
+  width: 100%;
+  height: 260rpx;
+  background: #fff;
+  border-radius: 44rpx 44rpx 0 0;
 }
 .btn {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: #fff;
-  font-size: 10px;
+  color: #666;
+  font-size: 22rpx;
   font-weight: normal;
-  line-height: 16px;
 }
 .btn-icon {
-  margin-bottom: 6px;
-  width: 42px;
-  height: 42px;
+  margin-bottom: 18rpx;
+  width: 88rpx;
+  height: 88rpx;
   border-radius: 50%;
+}
+
+.close-icon {
+  position: absolute;
+  right: 32rpx;
+  top: 32rpx;
+  width: 40rpx;
+  height: 40rpx;
 }
