--- a/pages/subpages/home/media/note/index.wxml
+++ b/pages/subpages/home/media/note/index.wxml
@@ -90,7 +90,7 @@
 />
 
 <modal-mask 
-  wx:if="{{inputPopupVisible || posterModalVisible}}"
+  wx:if="{{inputPopupVisible}}"
   filter="{{posterModalVisible}}" 
   bindtap="hideModal" 
 />
