--- a/pages/subpages/home/media/video/index.wxml
+++ b/pages/subpages/home/media/video/index.wxml
@@ -43,7 +43,7 @@
 />
 
 <modal-mask 
-  wx:if="{{inputPopupVisible || posterModalVisible}}"
+  wx:if="{{inputPopupVisible}}"
   opacity="{{inputPopupVisible ? 0 : 0.3}}" 
   filter="{{posterModalVisible}}" 
   bindtap="hideModal" 
