--- a/components/hotel-item/index.wxss
+++ b/components/hotel-item/index.wxss
@@ -80,9 +80,9 @@
   margin-right: 10rpx;
   padding: 2rpx 10rpx;
   max-width: 170rpx;
-  color: var(--blue-1);
-  font-size: 20rpx;
-  background: #ebf2fd;
+  color: #999;
+  font-size: 18rpx;
+  background: #f1f1f1;
   border-radius: 10rpx;
 }
 
