--- a/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
@@ -185,7 +185,7 @@
 />
 
 <qr-code-modal 
-  wx:if="{{qRcodeModalVisible}}"
+  wx:if="{{qrCodeModalVisible}}"
   code="{{orderInfo.verifyCode}}" 
   bind:hide="hideQRcodeModal"
 />
