--- a/pages/subpages/mine/order/index.wxml
+++ b/pages/subpages/mine/order/index.wxml
@@ -106,7 +106,7 @@
 </view>
 
 <qr-code-modal 
-  wx:if="{{qRcodeModalVisible}}"
+  wx:if="{{qrCodeModalVisible}}"
   code="{{verifyCode}}" 
   bind:hide="hideQRcodeModal"
 />
