--- a/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/scenic-order/order-detail/index.wxml
@@ -107,7 +107,7 @@
 </view>
 
 <qr-code-modal 
-  wx:if="{{qRcodeModalVisible}}"
+  wx:if="{{qrCodeModalVisible}}"
   code="{{verifyCode}}" 
   bind:hide="hideQRcodeModal"
 />
