--- a/pages/subpages/common/search/index.wxml
+++ b/pages/subpages/common/search/index.wxml
@@ -216,7 +216,7 @@
   />
   <view class="loading row center" wx:if="{{userList.length && userLoading}}">
     <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
-    <text>加载中...</text>
+    <text>加载中</text>
   </view>
   <view class="no-more-tips" wx:if="{{userFinished && userList.length}}">～没有更多啦～</view>
   <empty-illus wx:if="{{userFinished && !userList.length}}" desc="没有找到相关用户" />
