--- a/pages/subpages/home/media/author-center/index.wxml
+++ b/pages/subpages/home/media/author-center/index.wxml
@@ -82,4 +82,4 @@
   </view>
 </view>
 
-<poster-modal wx:if="{{posterModalVisible}}" info="{{posterInfo}}" scene="9" />
+<poster-modal wx:if="{{posterModalVisible}}" info="{{posterInfo}}" scene="9" bind:hide="hidePosterModal" />
