--- a/pages/subpages/mall/goods/subpages/shop/index.wxml
+++ b/pages/subpages/mall/goods/subpages/shop/index.wxml
@@ -30,4 +30,4 @@
   </view>
 </view>
 
-<poster-modal wx:if="{{posterModalVisible}}" info="{{posterInfo}}" scene="8" />
+<poster-modal wx:if="{{posterModalVisible}}" info="{{posterInfo}}" scene="8" bind:hide="hidePosterModal" />
