--- a/pages/subpages/home/media/live/create-live/index.wxml
+++ b/pages/subpages/home/media/live/create-live/index.wxml
@@ -8,7 +8,7 @@
       </block>
       <block wx:if="{{uploadCoverLoading}}">
         <view class="loading" />
-        <view class="uploader-tips">封面上传中...</view>
+        <view class="uploader-tips">封面上传中</view>
       </block>
       <image wx:if="{{!uploadCoverLoading && cover}}" style="width: 100%; height: 100%;" src="{{cover}}" />
     </view>
@@ -20,7 +20,7 @@
       </block>
       <block wx:if="{{uploadShareCoverLoading}}">
         <view class="loading" />
-        <view class="uploader-tips">封面上传中...</view>
+        <view class="uploader-tips">封面上传中</view>
       </block>
       <image wx:if="{{!uploadShareCoverLoading && shareCover}}" style="width: 100%; height: 100%;" src="{{shareCover}}" />
     </view>
