feat: 商品详情视频、图片预览

--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -26,7 +26,7 @@
       bindtap="previewMedia" 
       data-current="{{0}}"
     >
-      <view class="video-wrap" bindtap="fullScreenPlay">
+      <view class="video-wrap">
         <video
           class="video-player"
           src="{{goodsInfo.video}}"
